examples/test/testpolicy19625.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19625
  namespace: namespace312
spec:
  podSelector:
    matchLabels:
      key22: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value26
          key32: value11
          key26: value49
      podSelector:
        matchLabels:
          key19: value24
          key24: value22
          key4: value11
